--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
     }
   ],
   "require": {
-    "bower-asset/jquery": "^3.2@stable"
+    "bower-asset/jquery": "^3.2@stable",
+    "bower-asset/owl.carousel": "^2.3.4"
   }
 }
